# Microsoft-Extractor-Suite

./: .editorconfig  .gitignore  .readthedocs.yaml  Build-Module.ps1  CHANGELOG.md  CODE_REVIEW_RESPONSE.md  Directory.Build.props  Import-Module.ps1  Microsoft-Extractor-Suite.psd1  Microsoft-Extractor-Suite.psm1  README.md  Test-Module.ps1  UAL.ps1  build.ps1  pyproject.toml
.github/: FUNDING.yml
.nocommit/: Connect.application.ps1  Connect.delegated.ps1  Get-Test.ps1  UAL.ps1  deviceCode.cs  helper.UAL.exchangeexecutor.ps1  initialize.ps1  sendhelp.txt
Scripts/: Connect.ps1  Get-AdminAuditLog.ps1  Get-AllEvidence.ps1  Get-AuditLogSettings.ps1  Get-AzureADGraphLogs.ps1  Get-AzureADLogs.ps1  Get-AzureActivityLogs.ps1  Get-AzureDirectoryActivityLogs.ps1  Get-AzureEntraGraphLogs.ps1  Get-ConditionalAccessPolicy.ps1  Get-Devices.ps1  Get-Emails.ps1  Get-Groups.ps1  Get-MFAStatus.ps1  Get-MailItemsAccessed.ps1  Get-MailboxAuditLog.ps1  Get-MailboxPermissions.ps1  Get-MessageTraceLog.ps1  Get-OAuthPermissions.ps1  Get-ProductLicenses.ps1  Get-RiskyEvents.ps1  Get-Roles.ps1  Get-Rules.ps1  Get-SecurityAlerts.ps1  Get-UAL.ps1  Get-UALGraph.ps1  Get-UALStatistics.ps1  Get-UsersInfo.ps1  Invoke-AppRegistrationAquisition.ps1  Invoke-Aquisition.ps1  Logger.ps1  ML-AddPermutation.ps1  ML-DataPipeline.ps1  ML-GetSyntheticUserPrompt.ps1  Start-MESTriage.ps1  TriageFunctions.ps1  UAL-365-Operations.ps1  UAL.ps1  param(.ps1
Templates/: Comprehensive.json  Comprehensive.psd1  Custom.json  Quick.json  Quick.psd1  README.md  Standard.json  Standard.psd1  [custom].psd1  schema.json
docs/: Exchange-Admin-API-README.md  Makefile  PERFORMANCE.md  make.bat  requirements.txt
src/: Microsoft.ExtractorSuite.csproj
(+132 files in other folders)
