[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "invictus_microsoft"
author = "Invictus-ir"
author-email = "info@invictus-ir.com"
home-page = "https://github.com/Invictus-ir/Invictus-Microsoft"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[tool.flit.metadata.requires-extra]
test = [
  # Add any test dependencies here
]

[tool.flit.metadata.urls]
Documentation = "https://invictus-microsoft.readthedocs.io/en/latest/"
Source = "https://github.com/Invictus-ir/Invictus-Microsoft"

